# tmux-continuous-view

./: CHANGELOG.md  README.md  continuous-view.tmux  pyproject.toml
continuous_view/: __init__.py  core.py  layout.py  tmux_client.py  viewer.py
scripts/: start.sh  stop.sh
tests/: test_core.py  test_layout.py  test_tmux_client.py
