[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-continuous-view"
version = "0.1.0"
description = "tmux plugin that mirrors source-pane context into an adjacent read-only pane"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[tool.setuptools]
packages = ["continuous_view"]

[tool.unittest]
start-dir = "tests"
